--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==21.2.0
 black==21.6b0
 click==8.0.1
 Django==3.2.5
+djangorestframework==3.12.4
 iniconfig==1.1.1
 mypy-extensions==0.4.3
 packaging==21.0
